@@ -1,5 +1,10 @@
 
-                CHANGES IN party VERSION 0.9-11 (2007-06-28)
+                CHANGES IN party VERSION 0.9-13 (2007-07-12)
+
+    o   update `mvt.f'
+
+
+                CHANGES IN party VERSION 0.9-12 (2007-06-28)
 
     o   adjust to coin 0.6-4
 
